--- a/SuperPaint2000/SuperPaint2000.vcxproj
+++ b/SuperPaint2000/SuperPaint2000.vcxproj
@@ -138,17 +138,20 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="cCanvas.cpp" />
+    <ClCompile Include="cEventManager.cpp" />
     <ClCompile Include="cRectangle.cpp" />
-    <ClCompile Include="cWindowManager.cpp" />
+    <ClCompile Include="cTool.cpp" />
+    <ClCompile Include="cWindow.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="cToolbox.cpp" />
+    <ClCompile Include="cToolManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cCanvas.h" />
+    <ClInclude Include="cEventManager.h" />
     <ClInclude Include="cRectangle.h" />
     <ClInclude Include="cTool.h" />
-    <ClInclude Include="cToolbox.h" />
-    <ClInclude Include="cWindowManager.h" />
+    <ClInclude Include="cToolManager.h" />
+    <ClInclude Include="cWindow.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
