--- a/SuperPaint2000/SuperPaint2000.vcxproj.filters
+++ b/SuperPaint2000/SuperPaint2000.vcxproj.filters
@@ -19,38 +19,53 @@
     <Filter Include="Source Files\Tools">
       <UniqueIdentifier>{be35d15c-a38a-418e-b8fe-c7c051ea6c04}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Managers">
+      <UniqueIdentifier>{64a82971-9d8a-4efa-a6d8-6f637654a744}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Managers">
+      <UniqueIdentifier>{b22c05c7-d868-4e03-b8cc-22f8c868ecdd}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="cToolbox.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="cRectangle.cpp">
       <Filter>Source Files\Tools</Filter>
-    </ClCompile>
-    <ClCompile Include="cWindowManager.cpp">
-      <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="cCanvas.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="cEventManager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="cToolManager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="cWindow.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cTool.cpp">
+      <Filter>Source Files\Tools</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="cToolbox.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="cTool.h">
       <Filter>Header Files\Tools</Filter>
     </ClInclude>
     <ClInclude Include="cRectangle.h">
       <Filter>Header Files\Tools</Filter>
     </ClInclude>
-    <ClInclude Include="cWindowManager.h">
+    <ClInclude Include="cCanvas.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="cCanvas.h">
+    <ClInclude Include="cEventManager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="cToolManager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="cWindow.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
