--- a/SuperPaint2000/SuperPaint2000.vcxproj.filters
+++ b/SuperPaint2000/SuperPaint2000.vcxproj.filters
@@ -25,6 +25,12 @@
     <Filter Include="Source Files\Managers">
       <UniqueIdentifier>{b22c05c7-d868-4e03-b8cc-22f8c868ecdd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Buttons">
+      <UniqueIdentifier>{5722487b-44a2-46d4-9fe9-67639e3dee46}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Buttons">
+      <UniqueIdentifier>{594535bc-643f-4b08-8ca7-bb13a5d2ebf3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -42,14 +48,23 @@
     <ClCompile Include="cToolManager.cpp">
       <Filter>Source Files\Managers</Filter>
     </ClCompile>
-    <ClCompile Include="cWindow.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="cTool.cpp">
       <Filter>Source Files\Tools</Filter>
     </ClCompile>
-    <ClCompile Include="cButton.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="cWindowManager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="cButtonRectangle.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="cButtonManager.cpp">
+      <Filter>Source Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="cButtonCircle.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="cCircle.cpp">
+      <Filter>Source Files\Tools</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -68,11 +83,20 @@
     <ClInclude Include="cToolManager.h">
       <Filter>Header Files\Managers</Filter>
     </ClInclude>
-    <ClInclude Include="cWindow.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="cWindowManager.h">
+      <Filter>Header Files\Managers</Filter>
     </ClInclude>
-    <ClInclude Include="cButton.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="cButtonRectangle.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="cButtonCircle.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="cButtonManager.h">
+      <Filter>Header Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="cCircle.h">
+      <Filter>Header Files\Tools</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
