Load & Save Update
Added:
 - Loading Images onto Canvas
 - Saving Images (Exporting to Desktop)
 - NEW Window Move Event
 - NEW Window Resize Event

Updated:
 - Window Manager to support window and canvas resizing upon importing an image.
 - Window Manager to automatically move the Tool Window upon resizing OR moving the Main Window (this is called from Move and Resize Events).
 - Event Manager to update the view when the main window is resized.
 - Event Manager to prevent the resizing of Tool Window (slightly bugged).

--- a/SuperPaint2000/SuperPaint2000.vcxproj.filters
+++ b/SuperPaint2000/SuperPaint2000.vcxproj.filters
@@ -81,6 +81,15 @@
     <ClCompile Include="cButtonThicknessDown.cpp">
       <Filter>Source Files\Buttons</Filter>
     </ClCompile>
+    <ClCompile Include="cFileInterface.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="cButtonSaveFile.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="cButtonLoadFile.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="cTool.h">
@@ -126,6 +135,15 @@
       <Filter>Header Files\Buttons</Filter>
     </ClInclude>
     <ClInclude Include="cButtonThicknessDown.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="cFileInterface.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="cButtonLoadFile.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="cButtonSaveFile.h">
       <Filter>Header Files\Buttons</Filter>
     </ClInclude>
   </ItemGroup>
