--- a/SuperPaint2000/SuperPaint2000.vcxproj
+++ b/SuperPaint2000/SuperPaint2000.vcxproj
@@ -140,13 +140,16 @@
     <ClCompile Include="cButton.cpp" />
     <ClCompile Include="cButtonEllipse.cpp" />
     <ClCompile Include="cButtonLine.cpp" />
+    <ClCompile Include="cButtonLoadFile.cpp" />
     <ClCompile Include="cButtonRectangle.cpp" />
     <ClCompile Include="cButtonManager.cpp" />
+    <ClCompile Include="cButtonSaveFile.cpp" />
     <ClCompile Include="cButtonThicknessDown.cpp" />
     <ClCompile Include="cButtonThicknessUp.cpp" />
     <ClCompile Include="cCanvas.cpp" />
     <ClCompile Include="cEllipse.cpp" />
     <ClCompile Include="cEventManager.cpp" />
+    <ClCompile Include="cFileInterface.cpp" />
     <ClCompile Include="cLine.cpp" />
     <ClCompile Include="cRectangle.cpp" />
     <ClCompile Include="cTool.cpp" />
@@ -158,13 +161,16 @@
     <ClInclude Include="cButton.h" />
     <ClInclude Include="cButtonEllipse.h" />
     <ClInclude Include="cButtonLine.h" />
+    <ClInclude Include="cButtonLoadFile.h" />
     <ClInclude Include="cButtonRectangle.h" />
     <ClInclude Include="cButtonManager.h" />
+    <ClInclude Include="cButtonSaveFile.h" />
     <ClInclude Include="cButtonThicknessDown.h" />
     <ClInclude Include="cButtonThicknessUp.h" />
     <ClInclude Include="cCanvas.h" />
     <ClInclude Include="cEllipse.h" />
     <ClInclude Include="cEventManager.h" />
+    <ClInclude Include="cFileInterface.h" />
     <ClInclude Include="cLine.h" />
     <ClInclude Include="cRectangle.h" />
     <ClInclude Include="cTool.h" />
