Polygon Tool Update
Added:
 - NEW Polygon Tool.
 - NEW Polygon Tool Button.

Updated:
 - Tool Manager to support Polygon Tool selections.
 - cButton parent class to have m_CanSelect public member variable to help differentiate between buttons that can be selected and buttons that cannot be selected.
 - Button Manager to support new Polygon Tool.
 - Button Manager to make use of the new m_CanSelect variable to differentiate between buttons that can be selected and buttons that cannot be selected.

Removed:
 - Button Manager HasButton bool function because GetButton can essentially do the same thing as well as having more functionality.

--- a/SuperPaint2000/SuperPaint2000.vcxproj
+++ b/SuperPaint2000/SuperPaint2000.vcxproj
@@ -141,6 +141,7 @@
     <ClCompile Include="cButtonEllipse.cpp" />
     <ClCompile Include="cButtonLine.cpp" />
     <ClCompile Include="cButtonLoadFile.cpp" />
+    <ClCompile Include="cButtonPolygon.cpp" />
     <ClCompile Include="cButtonRectangle.cpp" />
     <ClCompile Include="cButtonManager.cpp" />
     <ClCompile Include="cButtonSaveFile.cpp" />
@@ -151,6 +152,7 @@
     <ClCompile Include="cEventManager.cpp" />
     <ClCompile Include="cFileInterface.cpp" />
     <ClCompile Include="cLine.cpp" />
+    <ClCompile Include="cPolygon.cpp" />
     <ClCompile Include="cRectangle.cpp" />
     <ClCompile Include="cTool.cpp" />
     <ClCompile Include="cWindowManager.cpp" />
@@ -162,6 +164,7 @@
     <ClInclude Include="cButtonEllipse.h" />
     <ClInclude Include="cButtonLine.h" />
     <ClInclude Include="cButtonLoadFile.h" />
+    <ClInclude Include="cButtonPolygon.h" />
     <ClInclude Include="cButtonRectangle.h" />
     <ClInclude Include="cButtonManager.h" />
     <ClInclude Include="cButtonSaveFile.h" />
@@ -172,6 +175,7 @@
     <ClInclude Include="cEventManager.h" />
     <ClInclude Include="cFileInterface.h" />
     <ClInclude Include="cLine.h" />
+    <ClInclude Include="cPolygon.h" />
     <ClInclude Include="cRectangle.h" />
     <ClInclude Include="cTool.h" />
     <ClInclude Include="cToolManager.h" />
