Stamp Tool Update
Added:
 - NEW Stamp Tool.
 - NEW Stamp Tool Button.
 - Tool Scale Factoring Variables (in Tool Parent class and Tool Manager).

Updated:
 - File Interface to have an overloaded function of LoadFile. This LoadFile overload returns a pointer to the image texture (First sets to a member variable of texture pointer type then returns that member variable).
 - Tool Parent Class to Support Scale Factors (Added Getters and Setters for Scale Factor member variables).
 - Tool Manager Class to Support Scale Factors.
 - Button Manager to Support new Stamp Tool Button.
 - Button Manager to now display different increments based on the selected tool (either shows outline thickness or scale factor).
 - File Namings: (Thickness to Size for Generalisation)
    - cButtonThicknessDown.h > cButtonSizeDown.h
    - cButtonThicknessUp.h > cButtonSizeUp.h
    - cButtonThicknessDown.cpp > cButtonSizeDown.cpp
    - cButtonThicknessUp.cpp > cButtonSizeUp.cpp

--- a/SuperPaint2000/SuperPaint2000.vcxproj.filters
+++ b/SuperPaint2000/SuperPaint2000.vcxproj.filters
@@ -75,10 +75,10 @@
     <ClCompile Include="cButtonLine.cpp">
       <Filter>Source Files\Buttons</Filter>
     </ClCompile>
-    <ClCompile Include="cButtonThicknessUp.cpp">
+    <ClCompile Include="cButtonSizeUp.cpp">
       <Filter>Source Files\Buttons</Filter>
     </ClCompile>
-    <ClCompile Include="cButtonThicknessDown.cpp">
+    <ClCompile Include="cButtonSizeDown.cpp">
       <Filter>Source Files\Buttons</Filter>
     </ClCompile>
     <ClCompile Include="cFileInterface.cpp">
@@ -95,6 +95,12 @@
     </ClCompile>
     <ClCompile Include="cButtonPolygon.cpp">
       <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="cButtonStamp.cpp">
+      <Filter>Source Files\Buttons</Filter>
+    </ClCompile>
+    <ClCompile Include="cStamp.cpp">
+      <Filter>Source Files\Tools</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -137,10 +143,10 @@
     <ClInclude Include="cButtonLine.h">
       <Filter>Header Files\Buttons</Filter>
     </ClInclude>
-    <ClInclude Include="cButtonThicknessUp.h">
+    <ClInclude Include="cButtonSizeUp.h">
       <Filter>Header Files\Buttons</Filter>
     </ClInclude>
-    <ClInclude Include="cButtonThicknessDown.h">
+    <ClInclude Include="cButtonSizeDown.h">
       <Filter>Header Files\Buttons</Filter>
     </ClInclude>
     <ClInclude Include="cFileInterface.h">
@@ -157,6 +163,12 @@
     </ClInclude>
     <ClInclude Include="cButtonPolygon.h">
       <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="cButtonStamp.h">
+      <Filter>Header Files\Buttons</Filter>
+    </ClInclude>
+    <ClInclude Include="cStamp.h">
+      <Filter>Header Files\Tools</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
