--- a/SuperPaint2000/SuperPaint2000.vcxproj
+++ b/SuperPaint2000/SuperPaint2000.vcxproj
@@ -145,8 +145,9 @@
     <ClCompile Include="cButtonRectangle.cpp" />
     <ClCompile Include="cButtonManager.cpp" />
     <ClCompile Include="cButtonSaveFile.cpp" />
-    <ClCompile Include="cButtonThicknessDown.cpp" />
-    <ClCompile Include="cButtonThicknessUp.cpp" />
+    <ClCompile Include="cButtonStamp.cpp" />
+    <ClCompile Include="cButtonSizeDown.cpp" />
+    <ClCompile Include="cButtonSizeUp.cpp" />
     <ClCompile Include="cCanvas.cpp" />
     <ClCompile Include="cEllipse.cpp" />
     <ClCompile Include="cEventManager.cpp" />
@@ -154,6 +155,7 @@
     <ClCompile Include="cLine.cpp" />
     <ClCompile Include="cPolygon.cpp" />
     <ClCompile Include="cRectangle.cpp" />
+    <ClCompile Include="cStamp.cpp" />
     <ClCompile Include="cTool.cpp" />
     <ClCompile Include="cWindowManager.cpp" />
     <ClCompile Include="main.cpp" />
@@ -168,8 +170,9 @@
     <ClInclude Include="cButtonRectangle.h" />
     <ClInclude Include="cButtonManager.h" />
     <ClInclude Include="cButtonSaveFile.h" />
-    <ClInclude Include="cButtonThicknessDown.h" />
-    <ClInclude Include="cButtonThicknessUp.h" />
+    <ClInclude Include="cButtonStamp.h" />
+    <ClInclude Include="cButtonSizeDown.h" />
+    <ClInclude Include="cButtonSizeUp.h" />
     <ClInclude Include="cCanvas.h" />
     <ClInclude Include="cEllipse.h" />
     <ClInclude Include="cEventManager.h" />
@@ -177,6 +180,7 @@
     <ClInclude Include="cLine.h" />
     <ClInclude Include="cPolygon.h" />
     <ClInclude Include="cRectangle.h" />
+    <ClInclude Include="cStamp.h" />
     <ClInclude Include="cTool.h" />
     <ClInclude Include="cToolManager.h" />
     <ClInclude Include="cWindowManager.h" />
